# sceneri-core

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  AvailablePlugins.json  CMakeLists.txt  CMakePresets.json  EngineAssets.nassetdb  LICENSE.md  README.md  build.gradle  gradle.properties  sceneri-core.code-workspace  sceneri.ngine  settings.gradle
AssetCompiler/: CMakeLists.txt  Dockerfile
AssetCompiler/Private/: main.cpp
AssetCompiler/Private/Apple/: Info_macOS.plist
DefaultPlugins/Animation/Code/: CMakeLists.txt
DefaultPlugins/Animation/Code/Private/: Animation.cpp  AnimationCache.cpp  Blendspace1D.cpp  MeshSkin.cpp  MeshSkinCache.cpp  Plugin.cpp  SkeletonCache.cpp  SkinningJob.cpp  SkinningJob.h
DefaultPlugins/Audio/AudioCore/Code/: CMakeLists.txt
DefaultPlugins/Editor/AssetCompilerCore/Code/: CMakeLists.txt
DefaultPlugins/GameFramework/Code/: CMakeLists.txt
DefaultPlugins/GameFramework/Code/Private/: PlayViewMode.cpp  PlayerManager.cpp  Plugin.cpp  Spawning.cpp  Tags.cpp
DefaultPlugins/Graphics/FontRendering/Code/: CMakeLists.txt
DefaultPlugins/Networking/Analytics/Code/: CMakeLists.txt
DefaultPlugins/Networking/Backend/Code/: CMakeLists.txt
DefaultPlugins/Networking/Core/Code/: CMakeLists.txt
DefaultPlugins/Networking/Http/Code/: CMakeLists.txt
DefaultPlugins/Physics/PhysicsCore/Code/: CMakeLists.txt
DefaultPlugins/VisualDebug/Code/: CMakeLists.txt
DefaultPlugins/VisualDebug/Code/Private/: Plugin.cpp
DefaultPlugins/Widgets/Code/: CMakeLists.txt
DefaultPlugins/Widgets/Code/Private/: DepthInfo.cpp  Manager.cpp  RootWidget.cpp  ToolWindow.cpp  Widget.cpp  WidgetCache.cpp  WidgetScene.cpp
Engine/: CMakeLists.txt
Engine/FeatureTests/Private/: ComponentEvents.cpp  ComponentReferences.cpp  ComponentScriptLogic.cpp  Scene.cpp
Engine/Private/: Engine.cpp
Engine/Private/Asset/: AssetLibrary.cpp  AssetManager.cpp
Engine/Private/Context/: Context.cpp  EventManager.cpp  Utils.cpp
Engine/Private/DataSource/: DataSourceCache.cpp  DynamicDataSource.cpp  DynamicPropertySource.cpp
Engine/Private/Entity/: CameraComponent.cpp  Component2D.cpp  Component3D.cpp  ComponentRegistry.cpp  ComponentSoftReference.cpp  ComponentTypeExtension.cpp  DataComponentOwner.cpp  DynamicObjectSceneComponent.cpp  HierarchyComponent.cpp  InputComponent.cpp  Manager.cpp  ProceduralStaticMeshComponent.cpp  RenderItemComponent.cpp  RenderItemComponentFunctions.cpp  RootComponent.cpp  RootSceneComponent.cpp  RootSceneComponent2D.cpp  SpringComponent.cpp  StaticMeshComponent.cpp
Engine/Private/Entity/Data/: ExternalScene.cpp  Logic.cpp  Tags.cpp
Engine/Private/Entity/Lights/: DirectionalLightComponent.cpp  EnvironmentLightComponent.cpp  LightComponentFunctions.cpp  LightSourceComponent.cpp  PointLightComponent.cpp  SpotLightComponent.cpp
Engine/Private/Entity/Primitives/: ArcComponent.cpp  ArrowComponent.cpp  BoxComponent.cpp  CapsuleComponent.cpp  ConeComponent.cpp  CylinderComponent.cpp  PlaneComponent.cpp  PyramidComponent.cpp  SphereComponent.cpp  TorusComponent.cpp
Engine/Private/Entity/Scene/: ComponentTemplateCache.cpp  SceneComponent.cpp  SceneRegistry.cpp
Engine/Private/IO/: Filesystem.cpp
Engine/Private/Input/: ActionMap.cpp  GestureRecognizer.cpp  InputManager.cpp  Monitor.cpp
Engine/Private/Project/: Project.cpp
Engine/Private/Reflection/: CoreTypes.cpp  Registry.cpp
Engine/Private/Resource/: ResourceManager.cpp
Engine/Private/Scene/: Scene2D.cpp  Scene3D.cpp  SceneBase.cpp
Engine/Private/Scripting/: CoreFunctions.cpp  ScriptCache.cpp
Engine/Private/Tag/: TagRegistry.cpp
Engine/Private/Threading/: JobManager.cpp
Engine/Public/Engine/: Engine.h  EngineSystems.h  PrecompiledHeaders.h
Engine/UnitTests/Private/: main.cpp
Launchers/: .gitignore  (+2 more)
Launchers/ProjectLauncher/: CMakeLists.txt  Dockerfile  build.gradle
Launchers/ProjectLauncher/Private/: Launcher.cpp
Launchers/ProjectLauncher/SampleLauncherPlugin/: SampleLauncher.nplugin
Renderer/: CMakeLists.txt
Renderer/Private/: Instance.cpp  Renderer.cpp
Renderer/Private/Buffers/: Buffer.cpp  BufferMetal.cpp  BufferVulkan.cpp  BufferWebGPU.cpp  DeviceMemory.cpp
Renderer/Private/Commands/: CommandBuffer.cpp  CommandPool.cpp  CommandQueueView.cpp
Renderer/Private/Debug/: RenderDocInterface.cpp
Renderer/Private/Descriptors/: Descriptors.cpp
Renderer/Private/Devices/: DeviceMemoryPool.cpp  LogicalDevice.cpp  PhysicalDevice.cpp  PhysicalDevices.cpp
Renderer/Private/Framegraph/: ComputePassStage.h  FramegraphCompiler.cpp  FramegraphRuntime.cpp  GenericPassStage.h  RenderPassStage.h  SubresourceStates.cpp  SubresourceStates.inl
Renderer/Private/Jobs/: QueueSubmissionJob.cpp
Renderer/Private/Pipelines/: GraphicsPipeline.cpp
Renderer/Private/PushConstants/: PushConstant.cpp
Renderer/Private/RenderOutput/: RenderTargetOutput.cpp  SwapchainOutput.cpp
Renderer/Private/Scene/: SceneData.cpp  SceneView.cpp  SceneView2D.cpp  SceneViewBase.cpp  TransformBuffer.cpp
Renderer/Private/Stages/: LateStageVisibilityCheckStage.cpp  MaterialStage.cpp  MaterialsStage.cpp  OctreeTraversalLoadStage.cpp  OctreeTraversalStage.cpp  Pass.cpp  PerFrameStagingBuffer.cpp  PresentStage.cpp  Stage.cpp  StartFrameStage.cpp  VisibleRenderItems.cpp
Renderer/Private/Threading/: Fence.cpp  JobRunnerData.cpp  Semaphore.cpp
Renderer/Private/WebGPU/: ConvertBlendFactor.h  ConvertCompareOperation.h  ConvertFormat.h  ConvertFormatToVertexFormat.h  ConvertImageAspectFlags.h  ConvertImageMappingType.h  ConvertShaderStage.h
Renderer/Private/Window/: Surface.cpp  Window.cpp
Renderer/Private/Wrappers/: AccelerationStructure.cpp  Framebuffer.cpp  GpuCheckpoint.cpp  Image.cpp  ImageMapping.cpp  PipelineLayout.cpp  RenderPass.cpp  Sampler.cpp
Renderer/Public/Renderer/: AccessFlags.h  ColorChannel.h  Constants.h  Format.h  FormatInfo.h  FrameImageId.h  GetSupportedAccessFlags.h  ImageAspectFlags.h  ImageLayout.h  Index.h  Instance.h  InstanceView.h  PipelineStageFlags.h  PrecompiledHeaders.h  Renderer.h  SampleCount.h  ShaderStage.h  Swizzle.h  UsageFlags.h
(+1847 files in other folders)
