cmake_minimum_required (VERSION 3.14)

include("${ENGINE_CMAKE_DIRECTORY}/MakePlugin.cmake")

MakePlugin(AAEA95B0-9B18-442D-B043-0629481E8C95 ${CMAKE_CURRENT_LIST_DIR} "Widgets" "lib" "bin" "../Widgets.nplugin")

if(NOT TARGET 5DC6A146-4AE7-43E8-9B53-69D46FC184AF)
	add_subdirectory("${CORE_ROOT_DIRECTORY}/DefaultPlugins/Graphics/FontRendering/Code" "${CMAKE_BINARY_DIR}/5DC6A146-4AE7-43E8-9B53-69D46FC184AF")
endif()
LinkStaticLibrary(AAEA95B0-9B18-442D-B043-0629481E8C95 5DC6A146-4AE7-43E8-9B53-69D46FC184AF)

if(NOT TARGET 72D83E65-B5D9-4CCD-8B8B-8227C805570E)
	add_subdirectory("${CORE_ROOT_DIRECTORY}/DefaultPlugins/Editor/AssetCompilerCore/Code" "${CMAKE_BINARY_DIR}/72D83E65-B5D9-4CCD-8B8B-8227C805570E")
endif()
LinkStaticLibrary(AAEA95B0-9B18-442D-B043-0629481E8C95 72D83E65-B5D9-4CCD-8B8B-8227C805570E)

if(NOT TARGET 4732DB7A-619B-421E-8569-BF31F607BBB7)
	add_subdirectory("${CORE_ROOT_DIRECTORY}/DefaultPlugins/Networking/Http/Code" "${CMAKE_BINARY_DIR}/4732DB7A-619B-421E-8569-BF31F607BBB7")
endif()
LinkStaticLibrary(AAEA95B0-9B18-442D-B043-0629481E8C95 4732DB7A-619B-421E-8569-BF31F607BBB7)

if(PLATFORM_APPLE_MACOS)
	if(PLATFORM_ARM)
		set(PNG_LIBRARY "${CORE_ROOT_DIRECTORY}/DefaultPlugins/Editor/AssetCompilerCore/Code/Private/3rdparty/libpng/lib/${PLATFORM_NAME}/${PLATFORM_ARCHITECTURE}/${CMAKE_STATIC_LIBRARY_PREFIX}png.a")
		target_link_libraries(AAEA95B0-9B18-442D-B043-0629481E8C95 PRIVATE ${PNG_LIBRARY})
	endif()
endif()

if(OPTION_BUILD_UNIT_TESTS)
	MakeUnitTests(AAEA95B0-9B18-442D-B043-0629481E8C95 Widgets)
	LinkStaticLibrary(WidgetsUnitTests Common)
	LinkStaticLibrary(WidgetsUnitTests Renderer)
	LinkStaticLibrary(WidgetsUnitTests Engine)
endif()
